Day 2 A0C2020 Password Philosophy Problem (#5)
* Solve the password philosophy problem
* Add readme files

Solves https://adventofcode.com/2020/day/2

--- a/aoc2020cs/aoc2020cs.csproj
+++ b/aoc2020cs/aoc2020cs.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day1ReportRepair.cs" />
+    <Compile Include="Day2PasswordPhilosophy.cs" />
     <Compile Include="IProblem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
