Day3 Toboggan Trajectory Problem (#6)
* Solve both problems for day3 Toboggan Trajectory

Error1: Not skipping first edge case for y=y+2 scenario
Error2: Not considering the integer overflow

--- a/aoc2020cs/aoc2020cs.csproj
+++ b/aoc2020cs/aoc2020cs.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Day1ReportRepair.cs" />
     <Compile Include="Day2PasswordPhilosophy.cs" />
+    <Compile Include="Day3TobogganTrajectory.cs" />
     <Compile Include="IProblem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
