AOC2020 Day5: Solved the Binary Seating problems  (#8)

--- a/aoc2020cs/aoc2020cs.csproj
+++ b/aoc2020cs/aoc2020cs.csproj
@@ -47,9 +47,11 @@
     <Compile Include="Day2PasswordPhilosophy.cs" />
     <Compile Include="Day3TobogganTrajectory.cs" />
     <Compile Include="Day4PassportProcessing.cs" />
+    <Compile Include="Day5BinaryBoarding.cs" />
     <Compile Include="IProblem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\DownloadRemoteData.cs" />
     <Compile Include="Utility\FileReader.cs" />
   </ItemGroup>
   <ItemGroup>
