--- a/aoc2020cs/aoc2020cs.csproj
+++ b/aoc2020cs/aoc2020cs.csproj
@@ -48,10 +48,10 @@
     <Compile Include="Day3TobogganTrajectory.cs" />
     <Compile Include="Day4PassportProcessing.cs" />
     <Compile Include="Day5BinaryBoarding.cs" />
+    <Compile Include="DayXProblem.cs" />
     <Compile Include="IProblem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utility\DownloadRemoteData.cs" />
     <Compile Include="Utility\FileReader.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,5 +60,11 @@
   <ItemGroup>
     <Folder Include="models\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "$(ProjectDir)\..\data\.aocdlconfig" "$(TargetDir)\.aocdlconfig"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
